; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_safe_getcwd.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_safe_getcwd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEDIUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @safe_getcwd(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %5 = call i8* (...) @get_current_dir_name()
  store i8* %5, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 (...) @negative_errno()
  store i32 %9, i32* %2, align 4
  br label %24

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 0
  %13 = load i8, i8* %12, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp ne i32 %14, 47
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @free(i8* %17)
  %19 = load i32, i32* @ENOMEDIUM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %24

21:                                               ; preds = %10
  %22 = load i8*, i8** %4, align 8
  %23 = load i8**, i8*** %3, align 8
  store i8* %22, i8** %23, align 8
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %16, %8
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i8* @get_current_dir_name(...) #1

declare dso_local i32 @negative_errno(...) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
